--- a/color_Palette_UI.ui
+++ b/color_Palette_UI.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1233</width>
-    <height>823</height>
+    <width>1291</width>
+    <height>905</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -424,21 +424,31 @@ QPushButton::click {background-color : green}</string>
             <property name="title">
              <string>Save/Load</string>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout">
-             <item>
-              <widget class="QLineEdit" name="lineEdit_color_palette_name"/>
-             </item>
-             <item>
-              <widget class="QPushButton" name="pushButton_Save_Palette">
+            <layout class="QGridLayout" name="gridLayout_7">
+             <item row="3" column="0">
+              <widget class="QPushButton" name="pushButton_save_palette">
                <property name="text">
                 <string>Save Palette</string>
                </property>
               </widget>
              </item>
-             <item>
-              <widget class="QPushButton" name="pushButton_Load_Palette">
+             <item row="1" column="0">
+              <widget class="QLineEdit" name="lineEdit_color_palette_name"/>
+             </item>
+             <item row="4" column="0">
+              <widget class="QPushButton" name="pushButton_load_palette">
                <property name="text">
                 <string>Load Palette</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1" rowspan="4">
+              <widget class="QListWidget" name="listWidget_color_palettes"/>
+             </item>
+             <item row="2" column="0">
+              <widget class="QPushButton" name="pushButton_refresh_palettes">
+               <property name="text">
+                <string>Refresh</string>
                </property>
               </widget>
              </item>
