--- a/color_Palette_UI.ui
+++ b/color_Palette_UI.ui
@@ -40,14 +40,14 @@
              <string>Other Settings</string>
             </property>
             <layout class="QGridLayout" name="gridLayout">
-             <item row="1" column="0" colspan="4">
+             <item row="2" column="0" colspan="4">
               <widget class="Line" name="line">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
                </property>
               </widget>
              </item>
-             <item row="3" column="2">
+             <item row="4" column="2">
               <widget class="QSpinBox" name="spinBox_Color_Mask_Kernel_Min">
                <property name="maximum">
                 <number>255</number>
@@ -57,7 +57,23 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="0" colspan="4">
+             <item row="3" column="2" colspan="2">
+              <widget class="QComboBox" name="comboBox_Color_Mask_Kernel">
+               <item>
+                <property name="text">
+                 <string>Custom</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="5" column="0" colspan="4">
+              <widget class="Line" name="line_2">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0" colspan="4">
               <widget class="QCheckBox" name="checkBox_is_HSV">
                <property name="text">
                 <string>Is HSV Color Type
@@ -65,7 +81,7 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="3">
+             <item row="4" column="3">
               <widget class="QSpinBox" name="spinBox_Color_Mask_Kernel_Max">
                <property name="maximum">
                 <number>255</number>
@@ -75,27 +91,18 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="0" rowspan="2" colspan="2">
+             <item row="3" column="0" rowspan="2" colspan="2">
               <widget class="QCheckBox" name="checkBox_Color_Mask_Kernel">
                <property name="text">
                 <string>Kernel</string>
                </property>
               </widget>
              </item>
-             <item row="4" column="0" colspan="4">
-              <widget class="Line" name="line_2">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
+             <item row="0" column="0" colspan="4">
+              <widget class="QCheckBox" name="checkBox_is_Invert">
+               <property name="text">
+                <string>Invert</string>
                </property>
-              </widget>
-             </item>
-             <item row="2" column="2" colspan="2">
-              <widget class="QComboBox" name="comboBox_Color_Mask_Kernel">
-               <item>
-                <property name="text">
-                 <string>Custom</string>
-                </property>
-               </item>
               </widget>
              </item>
             </layout>
@@ -107,7 +114,7 @@
              <string>Color Palette</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_3">
-             <item row="3" column="3">
+             <item row="4" column="4">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Upper_Blue">
                <property name="maximum">
                 <number>255</number>
@@ -117,7 +124,7 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="2">
+             <item row="0" column="3">
               <widget class="QLabel" name="label_2">
                <property name="text">
                 <string>Green</string>
@@ -127,7 +134,7 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="1">
+             <item row="4" column="2">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Upper_Red">
                <property name="maximum">
                 <number>255</number>
@@ -137,14 +144,14 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="3">
+             <item row="3" column="4">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Lower_Blue">
                <property name="maximum">
                 <number>255</number>
                </property>
               </widget>
              </item>
-             <item row="0" column="3">
+             <item row="0" column="4">
               <widget class="QLabel" name="label_3">
                <property name="text">
                 <string>Blue</string>
@@ -154,7 +161,7 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="2">
+             <item row="4" column="3">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Upper_Green">
                <property name="maximum">
                 <number>255</number>
@@ -164,7 +171,7 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="0">
+             <item row="4" column="1">
               <widget class="QLabel" name="label_Color_Palette_Higher">
                <property name="text">
                 <string>Higher</string>
@@ -174,7 +181,7 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
+             <item row="0" column="2">
               <widget class="QLabel" name="label">
                <property name="text">
                 <string>Red</string>
@@ -184,21 +191,21 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="1">
+             <item row="3" column="2">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Lower_Red">
                <property name="maximum">
                 <number>255</number>
                </property>
               </widget>
              </item>
-             <item row="2" column="2">
+             <item row="3" column="3">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Lower_Green">
                <property name="maximum">
                 <number>255</number>
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
+             <item row="3" column="1">
               <widget class="QLabel" name="label_Color_Palette_Lower">
                <property name="text">
                 <string>Lower</string>
@@ -208,32 +215,61 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="3">
+             <item row="1" column="4">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Double_Click_Blue">
                <property name="maximum">
                 <number>255</number>
                </property>
               </widget>
              </item>
-             <item row="1" column="2">
+             <item row="1" column="3">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Double_Click_Green">
                <property name="maximum">
                 <number>255</number>
                </property>
               </widget>
              </item>
-             <item row="1" column="1">
+             <item row="1" column="2">
               <widget class="QSpinBox" name="spinBox_Color_Palette_Double_Click_Red">
                <property name="maximum">
                 <number>255</number>
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
-              <widget class="QPushButton" name="pushButton_Double_Click_Listener">
+             <item row="1" column="1">
+              <widget class="QLabel" name="label_Color_Palette_Double_Clicked">
                <property name="text">
-                <string>Double Click
-Listener</string>
+                <string>Double Click</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="3" colspan="2">
+              <widget class="QPushButton" name="pushButton_Convert_Double_Clicked_RGB">
+               <property name="text">
+                <string>Convert Double Clicked RGB</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="2">
+              <widget class="QSpinBox" name="spinBox_Color_Palette_Double_Click_Margin">
+               <property name="maximum">
+                <number>255</number>
+               </property>
+               <property name="singleStep">
+                <number>5</number>
+               </property>
+               <property name="value">
+                <number>50</number>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QCheckBox" name="checkBox_Color_Picker_Live_Mask">
+               <property name="text">
+                <string>Live</string>
                </property>
               </widget>
              </item>
