--- a/color_Palette_UI.ui
+++ b/color_Palette_UI.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1291</width>
-    <height>905</height>
+    <width>1303</width>
+    <height>912</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -279,7 +279,8 @@
              <item row="1" column="1">
               <widget class="QLabel" name="label_Color_Palette_Double_Clicked">
                <property name="text">
-                <string>Double Click</string>
+                <string>Double
+Click</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
